--- a/codeup-design.html
+++ b/codeup-design.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Codeup-Design</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/codeup-design.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,38 +14,65 @@
 </head>
 <body>
 
-<div class="nav-background bg-light"></div>
-<div class="wrapper">
-    <nav class="navbar navbar-light">
-        <div class="container-fluid">
-            <ul class="nav w-100 justify-content-center">
-                <li class="order-xs-1 order-md-3 order-lg-0 mr-lg-auto">
-                    <a href="#" class="navbar-brand d-block w-100 mb-2 m-md-0 text-center">
-                        <img class="" width="105px" src="img/logo-cropped.png" alt="Codeup Design logo">
-                        <div class="brand-name d-block d-lg-inline text-center w-100">codeup design</div>
-                    </a>
-                </li>
-                <div class="w-100 d-md-none"></div><!-- used to force line break in flex items for mobile -->
-                <li class="nav-item order-xs-2 order-md-1 order-lg-1 mt-md-5">
-                    <a class="nav-link text-uppercase px-2 px-md-3" href="">Services</a>
-                </li>
-                <li class="nav-item order-xs-3 order-md-2 order-lg-2 mt-md-5">
-                    <a class="nav-link text-uppercase px-2 pl-md-3 pr-md-0 px-lg-3" href="">Work</a>
-                </li>
+    <div class="nav-background bg-light"></div>
+    <div class="wrapper">
+        <nav class="navbar navbar-light">
+            <div class="container-fluid">
+                <ul class="nav w-100 justify-content-center">
+                    <li class="order-xs-1 order-md-3 order-lg-0 mr-lg-auto">
+                        <a href="#" class="navbar-brand d-block w-100 mb-2 m-md-0 text-center">
+                            <img class="" width="105px" src="img/logo-cropped.png" alt="Codeup Design logo">
+                            <div class="brand-name d-block d-lg-inline text-center w-100">codeup design</div>
+                        </a>
+                    </li>
+                    <div class="w-100 d-md-none"></div><!-- used to force line break in flex items for mobile -->
+                    <li class="nav-item order-xs-2 order-md-1 order-lg-1 mt-md-5">
+                        <a class="nav-link text-uppercase px-2 px-md-3" href="">Services</a>
+                    </li>
+                    <li class="nav-item order-xs-3 order-md-2 order-lg-2 mt-md-5">
+                        <a class="nav-link text-uppercase px-2 pl-md-3 pr-md-0 px-lg-3" href="">Work</a>
+                    </li>
 
-                <li class="nav-item order-xs-4 order-md-4 order-lg-3 mt-md-5">
-                    <a class="nav-link text-uppercase px-2 pl-md-0 pr-md-3 px-lg-3" href="">Blog</a>
-                </li>
-                <li class="nav-item order-xs-5 order-md-5 order-lg-4 mt-md-5">
-                    <a class="nav-link text-uppercase px-2 px-md-3" href="">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+                    <li class="nav-item order-xs-4 order-md-4 order-lg-3 mt-md-5">
+                        <a class="nav-link text-uppercase px-2 pl-md-0 pr-md-3 px-lg-3" href="">Blog</a>
+                    </li>
+                    <li class="nav-item order-xs-5 order-md-5 order-lg-4 mt-md-5">
+                        <a class="nav-link text-uppercase px-2 px-md-3" href="">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <br>
 
+    <h1 class="text-center">VISUAL DESIGN &<br>
+        WEB DEVELOPMENT</h1>
+
+    <br>
+
+    <h3 class="text-center">FROM PARK CITY, UTAH</h3>
+
+    <br>
+
+    <div class="dot-container">
+        <span class="dot1"></span>
+        <span class="dot2"></span>
+        <span class="dot3"></span>
+        <span class="dot4"></span>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="photos row m-4 justify-content-center">
+        <div class="selected-work text-center col-sm-1 m-5">SELECTED WORK</div>
+        <div class="col-sm-1"><img src="img/apple-ipad.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;"></div>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
