Moved icons to center

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -55,11 +55,21 @@
 
     <br>
 
-    <div class="dot-container">
-        <span class="dot1"></span>
-        <span class="dot2"></span>
-        <span class="dot3"></span>
-        <span class="dot4"></span>
+    <div class="container">
+        <div class="row row-cols-2">
+            <div class="col-xs-6">
+                <div class="p-3   d-flex flex-row-reverse"><span class="dot1"></span></div>
+            </div>
+            <div class="col-xs-6">
+                <div class="p-3 "><span class="dot2"></span></div>
+            </div>
+            <div class="col-xs-6">
+                <div class="p-3  d-flex flex-row-reverse"><span class="dot3"></span></div>
+            </div>
+            <div class="col-xs-6">
+                <div class="p-3"><span class="dot4"></span></div>
+            </div>
+        </div>
     </div>
 
     <br>
