Created dots with text

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -58,16 +58,16 @@
     <div class="container">
         <div class="row row-cols-2">
             <div class="col-xs-6">
-                <div class="p-3   d-flex flex-row-reverse"><span class="dot1"></span></div>
+                <div class="p-3   d-flex flex-row-reverse"><span class="dot1">DESIGN</span></div>
             </div>
             <div class="col-xs-6">
-                <div class="p-3 "><span class="dot2"></span></div>
+                <div class="p-3 "><span class="dot2">DEVELOP</span></div>
             </div>
             <div class="col-xs-6">
-                <div class="p-3  d-flex flex-row-reverse"><span class="dot3"></span></div>
+                <div class="p-3  d-flex flex-row-reverse"><span class="dot3">SUPPORT</span></div>
             </div>
             <div class="col-xs-6">
-                <div class="p-3"><span class="dot4"></span></div>
+                <div class="p-3"><span class="dot4">HOST</span></div>
             </div>
         </div>
     </div>
@@ -78,7 +78,35 @@
 
     <div class="photos row m-4 justify-content-center">
         <div class="selected-work text-center col-sm-1 m-5">SELECTED WORK</div>
-        <div class="col-sm-1"><img src="img/apple-ipad.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;"></div>
+        <div class="col-sm-1"><img src="img/apple-ipad.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="p-3   d-flex flex-row-reverse"><span class="dot1-apple"></span></div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="p-3   d-flex flex-row-reverse"><span class="dot2-apple"></span></div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="p-3   d-flex flex-row-reverse"><span class="dot3-apple"></span></div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="p-3   d-flex flex-row-reverse"><span class="dot4-apple"></span></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="photos row m-4 justify-content-center">
+
+        <div class="col-sm-1"><img src="img/macbook.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>
+    </div>
+    <div class="photos row m-4 justify-content-center">
+
+        <div class="col-sm-1"><img src="img/man.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>
+    </div>
+    <div class="photos row m-4 justify-content-center">
+
+        <div class="col-sm-1"><img src="img/security.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>
     </div>
 
 
