Completed mobile view

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -74,74 +74,87 @@
 
     <br>
     <br>
-    <br>
 
-<!--    <div class="photos row m-4 justify-content-center">-->
-<!--        <div class="selected-work text-center col-sm-1 m-5">SELECTED WORK</div>-->
-<!--        <div class="col-sm-1"><img src="img/apple-ipad.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>-->
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--                <div class="col-xs-6">-->
-<!--                    <div class="p-3 d-flex flex-row-reverse bg-light border"><span class="dot1-apple"></span></div>-->
-<!--                </div>-->
-<!--                <div class="col-xs-6">-->
-<!--                    <div class="p-3 d-flex flex-row-reverse bg-light border"><span class="dot2-apple"></span></div>-->
-<!--                </div>-->
-<!--                <div class="col-xs-6">-->
-<!--                    <div class="p-3 d-flex flex-row-reverse bg-light border"><span class="dot3-apple"></span></div>-->
-<!--                </div>-->
-<!--                <div class="col-xs-6">-->
-<!--                    <div class="p-3 d-flex flex-row-reverse bg-light border"><span class="dot4-apple"></span></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
 
-    <div class="container">
-        <div class="photos row row-cols-xs-12 m-4 justify-content-center">
-            <div class="selected-work text-center col-xs-12 m-5">SELECTED WORK</div>
 
-            <div class="col-xs-12"><img src="img/apple-ipad.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;"></div>
 
-<!--            <div class="col-xs-4">FEATURED PROJECT</div>-->
 
-            <div class="d-flex flex-row bg-light">
+<div class="container">
+    <div class="photos row row-cols-xs-12 m-4 justify-content-center">
+
+        <div class="selected-work text-center col-xs-12 m-5">SELECTED WORK</div>
+
+        <div class="col-xs-12">
+            <img src="img/apple-ipad.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+        </div>
+
+        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
+            <div class="flex-row align-items-center">
                 <span>FEATURED PROJECT</span>
-                <div class="d-flex flex-row justify-content-end bg-dark">
-                    <span class="dot1-apple"></span>
-                    <span class="dot2-apple"></span>
-                    <span class="dot3-apple"></span>
-                    <span class="dot4-apple"></span>
-                </div>
-
             </div>
 
-
-
+            <div class="d-flex flex-row justify-content-end align-items-center">
+                <span class="dot1-apple align-items-center mx-1">D</span>
+                <span class="dot2-apple align-items-center mx-1">D</span>
+                <span class="dot3-apple align-items-center mx-1">S</span>
+                <span class="dot4-apple align-items-center mx-1">H</span>
+            </div>
         </div>
+
+
+        <div class="col-xs-12">
+            <img src="img/macbook.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+        </div>
+
+        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
+            <div class="flex-row align-items-center">
+                <span>FEATURED PROJECT</span>
+            </div>
+
+            <div class="d-flex flex-row justify-content-end align-items-center">
+                <span class="dot1-apple align-items-center mx-1">D</span>
+                <span class="dot2-apple align-items-center mx-1">D</span>
+                <span class="dot3-apple align-items-center mx-1">S</span>
+                <span class="dot4-apple align-items-center mx-1">H</span>
+            </div>
+        </div>
+
+        <div class="col-xs-12">
+            <img src="img/man.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+        </div>
+
+        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
+            <div class="flex-row align-items-center">
+                <span>FEATURED PROJECT</span>
+            </div>
+
+            <div class="d-flex flex-row justify-content-end align-items-center">
+                <span class="dot1-apple align-items-center mx-1">D</span>
+                <span class="dot2-apple align-items-center mx-1">D</span>
+                <span class="dot3-apple align-items-center mx-1">S</span>
+                <span class="dot4-apple align-items-center mx-1">H</span>
+            </div>
+        </div>
+
+        <div class="col-xs-12">
+            <img src="img/security.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+        </div>
+
+        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
+            <div class="flex-row align-items-center">
+                <span>FEATURED PROJECT</span>
+            </div>
+
+            <div class="d-flex flex-row justify-content-end align-items-center">
+                <span class="dot1-apple align-items-center mx-1">D</span>
+                <span class="dot2-apple align-items-center mx-1">D</span>
+                <span class="dot3-apple align-items-center mx-1">S</span>
+                <span class="dot4-apple align-items-center mx-1">H</span>
+            </div>
+        </div>
+
     </div>
-
-
-<!--    <div class="container">-->
-<!--        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">-->
-<!--            <div class="col">Column</div>-->
-<!--            <div class="col">Column</div>-->
-<!--            <div class="col">Column</div>-->
-<!--            <div class="col">Column</div>-->
-<!--        </div>-->
-<!--    </div>-->
-
-    <div class="photos row m-4 justify-content-center">
-        <div class="col-sm-1"><img src="img/macbook.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>
-    </div>
-
-    <div class="photos row m-4 justify-content-center">
-        <div class="col-sm-1"><img src="img/man.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>
-    </div>
-
-    <div class="photos row m-4 justify-content-center">
-        <div class="col-sm-1"><img src="img/security.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">FEATURED PROJECT</div>
-    </div>
+</div>
 
 
 
