Fixed the h1 for mobile and desktop

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -45,10 +45,12 @@
     </div>
 
     <br>
-
-    <h1 class="text-center">VISUAL DESIGN &<br>
-        WEB DEVELOPMENT</h1>
-
+<div class="container">
+    <div class="row text-center">
+        <h1 class="col-12">VISUAL DESIGN &
+         WEB DEVELOPMENT</h1>
+    </div>
+</div>
     <br>
 
     <h3 class="text-center">FROM PARK CITY, UTAH</h3>
