Final commit before 3:00PM

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <title>Codeup-Design</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/codeup-design.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/codeup-design.css">
 </head>
+
 <body>
 
     <div class="nav-background bg-light"></div>
@@ -45,12 +46,13 @@
     </div>
 
     <br>
-<div class="container">
-    <div class="row text-center">
-        <h1 class="col-12">VISUAL DESIGN &
-         WEB DEVELOPMENT</h1>
+
+    <div class="container">
+        <div class="row text-center">
+            <h1 class="col-12">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+        </div>
     </div>
-</div>
+
     <br>
 
     <h3 class="text-center">FROM PARK CITY, UTAH</h3>
@@ -58,19 +60,13 @@
     <br>
 
     <div class="container">
-        <div class="row row-cols-2">
-            <div class="col-xs-6">
-                <div class="p-3   d-flex flex-row-reverse"><span class="dot1">DESIGN</span></div>
-            </div>
-            <div class="col-xs-6">
-                <div class="p-3 "><span class="dot2">DEVELOP</span></div>
-            </div>
-            <div class="col-xs-6">
-                <div class="p-3  d-flex flex-row-reverse"><span class="dot3">SUPPORT</span></div>
-            </div>
-            <div class="col-xs-6">
-                <div class="p-3"><span class="dot4">HOST</span></div>
-            </div>
+        <div class="row row-cols-2 justify-content-center">
+
+            <div class="dot1 col-xs-6 col-lg-3 p-3 m-3">DESIGN</div>
+            <div class="dot2 col-xs-6 col-lg-3 p-3 m-3">DEVELOP</div>
+            <div class="dot3 col-xs-6 col-lg-3 p-3 m-3">SUPPORT</div>
+            <div class="dot4 col-xs-6 col-lg-3 p-3 m-3">HOST</div>
+
         </div>
     </div>
 
@@ -78,86 +74,91 @@
     <br>
 
 
+    <div class="container">
+        <div class="photos row row-cols-xs-12 m-4 justify-content-center">
+
+            <div class="selected-work text-center col-xs-12 col-lg-6 m-5">SELECTED WORK</div>
 
 
+            <div class="col-xs-12 col-lg-6">
+                <div>
+                    <img src="img/apple-ipad.jpg" class="photo1 img-fluid mh-80 img" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+                </div>
 
-<div class="container">
-    <div class="photos row row-cols-xs-12 m-4 justify-content-center">
+                <div class="d-flex justify-content-between">
+                    <div class="flex-row align-items-center">
+                        <span>FEATURED PROJECT</span>
+                    </div>
 
-        <div class="selected-work text-center col-xs-12 m-5">SELECTED WORK</div>
-
-        <div class="col-xs-12">
-            <img src="img/apple-ipad.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
-        </div>
-
-        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
-            <div class="flex-row align-items-center">
-                <span>FEATURED PROJECT</span>
+                    <div class="d-flex flex-row align-items-center">
+                        <span class="dot1-small align-items-center mx-1">D</span>
+                        <span class="dot2-small align-items-center mx-1">D</span>
+                        <span class="dot3-small align-items-center mx-1">S</span>
+                        <span class="dot4-small align-items-center mx-1">H</span>
+                    </div>
+                </div>
             </div>
 
-            <div class="d-flex flex-row justify-content-end align-items-center">
-                <span class="dot1-apple align-items-center mx-1">D</span>
-                <span class="dot2-apple align-items-center mx-1">D</span>
-                <span class="dot3-apple align-items-center mx-1">S</span>
-                <span class="dot4-apple align-items-center mx-1">H</span>
-            </div>
-        </div>
+            <div class="col-xs-12 col-lg-6">
+                <div>
+                    <img src="img/macbook.jpg" class="photo2 img-fluid mh-80 img" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+                </div>
 
+                <div class="d-flex justify-content-between">
+                    <div class="flex-row align-items-center">
+                        <span>FEATURED PROJECT</span>
+                    </div>
 
-        <div class="col-xs-12">
-            <img src="img/macbook.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
-        </div>
-
-        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
-            <div class="flex-row align-items-center">
-                <span>FEATURED PROJECT</span>
-            </div>
-
-            <div class="d-flex flex-row justify-content-end align-items-center">
-                <span class="dot1-apple align-items-center mx-1">D</span>
-                <span class="dot2-apple align-items-center mx-1">D</span>
-                <span class="dot3-apple align-items-center mx-1">S</span>
-                <span class="dot4-apple align-items-center mx-1">H</span>
-            </div>
-        </div>
-
-        <div class="col-xs-12">
-            <img src="img/man.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
-        </div>
-
-        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
-            <div class="flex-row align-items-center">
-                <span>FEATURED PROJECT</span>
+                    <div class="d-flex flex-row align-items-center">
+                        <span class="dot1-small align-items-center mx-1">D</span>
+                        <span class="dot2-small align-items-center mx-1">D</span>
+                        <span class="dot3-small align-items-center mx-1">S</span>
+                        <span class="dot4-small align-items-center mx-1">H</span>
+                    </div>
+                </div>
             </div>
 
-            <div class="d-flex flex-row justify-content-end align-items-center">
-                <span class="dot1-apple align-items-center mx-1">D</span>
-                <span class="dot2-apple align-items-center mx-1">D</span>
-                <span class="dot3-apple align-items-center mx-1">S</span>
-                <span class="dot4-apple align-items-center mx-1">H</span>
+            <div class="col-xs-12 col-lg-6">
+                <div>
+                    <img src="img/man.jpg" class="photo3 img-fluid mh-80 img" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+                </div>
+
+                <div class="d-flex justify-content-between">
+                    <div class="flex-row align-items-center">
+                        <span>FEATURED PROJECT</span>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center">
+                        <span class="dot1-small align-items-center mx-1">D</span>
+                        <span class="dot2-small align-items-center mx-1">D</span>
+                        <span class="dot3-small align-items-center mx-1">S</span>
+                        <span class="dot4-small align-items-center mx-1">H</span>
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div class="col-xs-12">
-            <img src="img/security.jpg" class="photo1 img-fluid mw-80" style="border: 11px solid #E6E6E6; border-radius: 7px;">
-        </div>
+            <div class="col-xs-12 col-lg-6">
+                <div>
+                    <img src="img/security.jpg" class="photo4 img-fluid mh-80 img" style="border: 11px solid #E6E6E6; border-radius: 7px;">
+                </div>
 
-        <div class="d-flex flex-row justify-content-between align-items-center mt-2 mb-3">
-            <div class="flex-row align-items-center">
-                <span>FEATURED PROJECT</span>
+                <div class="d-flex justify-content-between">
+                    <div class="flex-row align-items-center">
+                        <span>FEATURED PROJECT</span>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center">
+                        <span class="dot1-small align-items-center mx-1">D</span>
+                        <span class="dot2-small align-items-center mx-1">D</span>
+                        <span class="dot3-small align-items-center mx-1">S</span>
+                        <span class="dot4-small align-items-center mx-1">H</span>
+                    </div>
+                </div>
             </div>
 
-            <div class="d-flex flex-row justify-content-end align-items-center">
-                <span class="dot1-apple align-items-center mx-1">D</span>
-                <span class="dot2-apple align-items-center mx-1">D</span>
-                <span class="dot3-apple align-items-center mx-1">S</span>
-                <span class="dot4-apple align-items-center mx-1">H</span>
-            </div>
-        </div>
 
+        </div>
     </div>
-</div>
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
